; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_update_crypto.c_crc_octets.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_update_crypto.c_crc_octets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRC24_INIT = common dso_local global i64 0, align 8
@CRC24_POLY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64)* @crc_octets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @crc_octets(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* @CRC24_INIT, align 8
  store i64 %7, i64* %5, align 8
  br label %8

8:                                                ; preds = %37, %2
  %9 = load i64, i64* %4, align 8
  %10 = add i64 %9, -1
  store i64 %10, i64* %4, align 8
  %11 = icmp ne i64 %9, 0
  br i1 %11, label %12, label %38

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = getelementptr inbounds i32, i32* %13, i32 1
  store i32* %14, i32** %3, align 8
  %15 = load i32, i32* %13, align 4
  %16 = shl i32 %15, 16
  %17 = sext i32 %16 to i64
  %18 = load i64, i64* %5, align 8
  %19 = xor i64 %18, %17
  store i64 %19, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %20

20:                                               ; preds = %34, %12
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %21, 8
  br i1 %22, label %23, label %37

23:                                               ; preds = %20
  %24 = load i64, i64* %5, align 8
  %25 = shl i64 %24, 1
  store i64 %25, i64* %5, align 8
  %26 = load i64, i64* %5, align 8
  %27 = and i64 %26, 16777216
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %23
  %30 = load i64, i64* @CRC24_POLY, align 8
  %31 = load i64, i64* %5, align 8
  %32 = xor i64 %31, %30
  store i64 %32, i64* %5, align 8
  br label %33

33:                                               ; preds = %29, %23
  br label %34

34:                                               ; preds = %33
  %35 = load i32, i32* %6, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %6, align 4
  br label %20

37:                                               ; preds = %20
  br label %8

38:                                               ; preds = %8
  %39 = load i64, i64* %5, align 8
  %40 = and i64 %39, 16777215
  ret i64 %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
